k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: amnesia-shh
spec:
  headers:
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    forceSTSHeader: true
    contentTypeNosniff: true
    frameDeny: true
    referrerPolicy: "no-referrer"
    permissionsPolicy: "geolocation=(), microphone=(), camera=()"
    customResponseHeaders:
      # 1. Permite carregar recursos de CDNs sem restrições de COEP
      Cross-Origin-Embedder-Policy: "unsafe-none"
      Cross-Origin-Opener-Policy: "same-origin"
      
      # 2. A CSP Perfeita: Autoriza o Tailwind, os teus scripts de decifração e as Google Fonts
      Content-Security-Policy: "default-src 'self'; script-src 'self' https://cdn.tailwindcss.com 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net; font-src 'self' data: https://fonts.gstatic.com; img-src 'self' data: https://online.swagger.io; connect-src 'self' https://<o-teu-dominio>;"
